# gazebo_model_destroyer_plugin

./: CMakeLists.txt  README.md  package.xml
include/gazebo_model_destroyer_plugin/: gazebo_model_destroyer_plugin.h
src/: gazebo_model_destroyer_plugin.cpp
srv/: Destroy.srv
test/launch/: example.test
test/urdf/: robot.xacro
test/worlds/: example.world
